WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105384
Correct missing touch event handler de-registration for nested Documents and DOMWindows
https://bugs.webkit.org/show_bug.cgi?id=105384
Summary
Correct missing touch event handler de-registration for nested Documents and ...
Levi Weintraub
Reported
2012-12-18 20:56:44 PST
I believe this catches the remaining stale-node-pointer issues.
Attachments
Patch
(4.95 KB, patch)
2012-12-18 21:56 PST
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2012-12-18 21:56:50 PST
Created
attachment 180090
[details]
Patch
Levi Weintraub
Comment 2
2012-12-19 10:47:01 PST
Ping
James Robinson
Comment 3
2012-12-19 10:47:36 PST
Comment on
attachment 180090
[details]
Patch pong
Levi Weintraub
Comment 4
2012-12-19 11:09:33 PST
Comment on
attachment 180090
[details]
Patch Ty!
Levi Weintraub
Comment 5
2012-12-19 11:23:08 PST
Comment on
attachment 180090
[details]
Patch Clearing flags on attachment: 180090 Committed
r138181
: <
http://trac.webkit.org/changeset/138181
>
Levi Weintraub
Comment 6
2012-12-19 11:23:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug